--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -8,13 +8,13 @@
     </style>
 
     <style name="TextStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">@color/font_color_dark</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/font_medium</item>
         <!--<item name="android:textColorHint">@color/font_color_medium</item>-->
     </style>
 
     <style name="EditTextStyle" parent="@android:style/Widget.EditText">
-        <item name="android:textColor">@color/font_color_dark</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/font_medium</item>
         <item name="android:background">@color/transparent</item>
         <!--<item name="android:textColorHint">@color/font_color_medium</item>-->
