--- a/res/layout/fragment_vol.xml
+++ b/res/layout/fragment_vol.xml
@@ -1,107 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="horizontal">
+    android:background="@drawable/background2"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
+    <View
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:layout_weight="1" />
 
     <LinearLayout
+        android:id="@+id/content1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:orientation="horizontal">
 
-        <com.msx7.android.tclient.ui.widget.CircleRectShape
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shuang_vol_1"
-            app:AngleLength="240"
-            app:ArcWidth="70dp"
-            app:CircleStartAngle="150"
-            app:DrawableHeight="80dp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/left"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <ImageView
+            <com.msx7.android.tclient.ui.widget.CircleRectShape
+                android:id="@+id/CircleLeft"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shuang_vol_1"
+                app:AngleLength="240"
+                app:ArcWidth="70dp"
+                app:CircleStartAngle="150"
+                app:DrawableHeight="80dp" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="centerInside"
-                android:id="@+id/left1"
-                android:src="@drawable/selected_btn_vol_left" />
+                android:layout_marginTop="5dp"
+                android:gravity="center">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="左声道"
-                android:textColor="#FF00C7EB"
-                android:textSize="@dimen/font_xlarge"
-                android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/left1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/selected_btn_vol_left" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerInside"
-                android:id="@+id/right1"
-                android:src="@drawable/selected_btn_vol_right" />
+                <TextView
+                    android:id="@+id/left_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/vol_left"
+                    android:textColor="#FF00C7EB"
+                    android:textSize="@dimen/font_xlarge"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/right1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/selected_btn_vol_right" />
+            </LinearLayout>
         </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/right"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <com.msx7.android.tclient.ui.widget.CircleRectShape
+                android:id="@+id/CircleRight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shuang_vol_1"
+                app:AngleLength="240"
+                app:ArcWidth="70dp"
+                app:CircleStartAngle="150"
+                app:DrawableHeight="80dp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/left2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/selected_btn_vol_left" />
+
+                <TextView
+                    android:id="@+id/right_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/vol_right"
+                    android:textColor="#FF00C7EB"
+                    android:textSize="@dimen/font_xlarge"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/right2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/selected_btn_vol_right" />
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
 
-
     <LinearLayout
+        android:id="@+id/content2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
-        <com.msx7.android.tclient.ui.widget.CircleRectShape
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shuang_vol_1"
-            app:AngleLength="240"
-            app:ArcWidth="70dp"
-            app:CircleStartAngle="150"
-            app:DrawableHeight="80dp" />
-
-        <LinearLayout
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:gravity="center">
+            android:id="@+id/vol"
+            android:src="@drawable/btn_vol" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerInside"
-                android:id="@+id/left2"
-                android:src="@drawable/selected_btn_vol_left" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="右声道"
-                android:textColor="#FF00C7EB"
-                android:textSize="@dimen/font_xlarge"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerInside"
-                android:id="@+id/right2"
-                android:src="@drawable/selected_btn_vol_right" />
-        </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:id="@+id/chanl"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_vol_singlelchannel" />
     </LinearLayout>
-
 </LinearLayout>
