--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="title_text_color">@color/white</color>
+    <color name="title_text_color">#15dcda</color>
     <color name="title_backgroud">@android:color/transparent</color>
 
     <color name="divider_color">#FFDDDDDD</color>
