--- a/res/layout/layout_menu.xml
+++ b/res/layout/layout_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="220dp"
-    android:padding="20dp"
     android:layout_height="wrap_content"
+    android:background="@drawable/black_ground"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <TextView
+        android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
@@ -20,6 +22,7 @@
         android:src="@drawable/connect_h" />
 
     <TextView
+        android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
@@ -32,6 +35,7 @@
         android:src="@drawable/connect_h" />
 
     <TextView
+        android:id="@+id/btn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
@@ -44,6 +48,7 @@
         android:src="@drawable/connect_h" />
 
     <TextView
+        android:id="@+id/btn4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
@@ -56,6 +61,7 @@
         android:src="@drawable/connect_h" />
 
     <TextView
+        android:id="@+id/btn5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
