--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,4 +19,12 @@
         <item name="android:background">@color/transparent</item>
         <!--<item name="android:textColorHint">@color/font_color_medium</item>-->
     </style>
+
+    <style name="mProgress_circle">
+        <item name="android:indeterminateDrawable">@drawable/progressbar_circle</item>
+        <item name="android:minWidth">25dp</item>
+        <item name="android:minHeight">25dp</item>
+        <item name="android:maxWidth">60dp</item>
+        <item name="android:maxHeight">60dp</item>
+    </style>
 </resources>
