--- a/res/layout/fragment_camera.xml
+++ b/res/layout/fragment_camera.xml
@@ -6,12 +6,16 @@
     android:orientation="vertical">
 
     <com.msx7.android.tclient.ui.CameraView
+        android:id="@+id/CameraView"
         android:layout_width="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:src="@drawable/background_camera_mobile" />
 
     <ImageView
+        android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
