--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -27,4 +27,22 @@
         <item name="android:maxWidth">60dp</item>
         <item name="android:maxHeight">60dp</item>
     </style>
+
+    <style name="transparent_dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@android:color/transparent</item>
+        - <!--  边框
+ -->
+        <item name="android:windowIsFloating">true</item>
+        - <!--  是否浮现在activity之上
+ -->
+        <item name="android:windowIsTranslucent">false</item>
+        - <!--  半透明
+ -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        - <!--  模糊
+ -->
+        <item name="android:backgroundDimAmount">0.6</item>
+    </style>
 </resources>
