--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:id="@+id/titleBar"
         android:layout_height="wrap_content"
-        app:Title="VXXXXBOX" />
+        app:Title="VXBOX" />
 
     <FrameLayout
         android:id="@+id/content"
