--- a/res/layout/fragment_camera.xml
+++ b/res/layout/fragment_camera.xml
@@ -12,6 +12,8 @@
         android:layout_marginRight="40dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
         android:src="@drawable/background_camera_mobile" />
 
     <ImageView
