--- a/res/layout/fragment_touch.xml
+++ b/res/layout/fragment_touch.xml
@@ -5,10 +5,37 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="200dp"
+    <View
         android:id="@+id/touch"
-        android:src="@drawable/background_camera_mobile"
-        android:scaleType="centerCrop"
-        android:layout_height="355dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:gravity="bottom"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_margin="6dp"
+            android:layout_weight="1"
+            android:hint="点击输入文字"
+            android:id="@+id/content"
+            android:textColorHint="#424242"
+            android:textColor="#424242"
+            android:background="#202020" />
+        <TextView
+            android:layout_width="60dp"
+            android:text="清空"
+            android:id="@+id/clear"
+            android:gravity="center"
+            android:padding="6dp"
+            android:layout_marginRight="6dp"
+            android:background="#202020"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
