--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -18,4 +18,16 @@
     <color name="accent_blue_light">#ffa0c8ed</color>
     <color name="grey_1">#ffa5a7aa</color>
 
+
+    <integer-array name="gplus_colors">
+        <item>@color/gplus_color_1</item>
+        <item>@color/gplus_color_2</item>
+        <item>@color/gplus_color_3</item>
+        <item>@color/gplus_color_4</item>
+    </integer-array>
+
+    <color name="gplus_color_1">#3e802f</color>
+    <color name="gplus_color_2">#f4b400</color>
+    <color name="gplus_color_3">#427fed</color>
+    <color name="gplus_color_4">#b23424</color>
 </resources>
